fixing z-index for header__navbar-item

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,7 @@
   list-style: none;
   padding-left: 0;
   margin-top: 4px 0 0 0;
+  z-index: 1;
 }
 
 .header__navbar-item {
